tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__query__contract_query_backlinks_help.snap
---
source: tests/e2e/machine_contract/query.rs
expression: stdout
---
List backlinks to a note

Usage: obsidian-cli-inspector query backlinks [OPTIONS] <NOTE>

Arguments:
  <NOTE>  Note path or title

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
