tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__query__contract_query_help.snap
---
source: tests/e2e/machine_contract/query.rs
expression: stdout
---
Search and retrieval commands

Usage: obsidian-cli-inspector query [OPTIONS] <COMMAND>

Commands:
  search      Search notes using full-text search
  backlinks   List backlinks to a note
  links       List forward links from a note
  unresolved  List all unresolved links in the vault
  tags        List notes by tag
  help        Print this message or the help of the given subcommand(s)

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
