tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__query__contract_query_links_help.snap
---
source: tests/e2e/machine_contract/query.rs
expression: stdout
---
List forward links from a note

Usage: obsidian-cli-inspector query links [OPTIONS] <NOTE>

Arguments:
  <NOTE>  Note path or title

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
