tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__query__contract_query_search_help.snap
---
source: tests/e2e/machine_contract/query.rs
expression: stdout
---
Search notes using full-text search

Usage: obsidian-cli-inspector query search [OPTIONS] <QUERY>

Arguments:
  <QUERY>  Search query

Options:
  -l, --limit <LIMIT>    Maximum number of results [default: 20]
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
