tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__query__contract_query_tags_help.snap
---
source: tests/e2e/machine_contract/query.rs
expression: stdout
---
List notes by tag

Usage: obsidian-cli-inspector query tags [OPTIONS] [TAG]

Arguments:
  [TAG]  Tag name (without #)

Options:
  -l, --list             List all tags if no tag specified
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
