tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__query__contract_query_unresolved_help.snap
---
source: tests/e2e/machine_contract/query.rs
expression: stdout
---
List all unresolved links in the vault

Usage: obsidian-cli-inspector query unresolved [OPTIONS]

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
