tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__query__machine_contract_links.snap
---
source: tests/e2e/machine_contract/query.rs
expression: normalize_for_snapshot(output)
---
{
  "command": "query.links",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "note": "Home"
  },
  "result": {
    "items": [],
    "total": 0
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
