tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__query__machine_contract_tags.snap
---
source: tests/e2e/machine_contract/query.rs
expression: normalize_for_snapshot(output)
---
{
  "command": "search.tags",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "list": false,
    "tag": null
  },
  "result": {
    "items": [
      {
        "tag": "brainstorming"
      },
      {
        "tag": "creativity"
      },
      {
        "tag": "daily"
      },
      {
        "tag": "engineering"
      },
      {
        "tag": "journal"
      },
      {
        "tag": "learning"
      },
      {
        "tag": "links"
      },
      {
        "tag": "pkm"
      },
      {
        "tag": "productivity"
      },
      {
        "tag": "reading"
      },
      {
        "tag": "software"
      },
      {
        "tag": "testing"
      }
    ],
    "total": 12
  },
  "timestamp": "TIMESTAMP"
}
